# tablethat

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SKILL.md  deny.toml  justfile  plan.toml.example  tablethat.example.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: audit.yml  ci.yml  release.yml
.plan/: .TEMPLATE.md  .schema.json  add-subcommands.md  ci-caching.md  colorschemes.md  demo-agentic-feedback-loop.md  demo-multi-user.md  demo-web-interface.md  docs-and-cleanup.md  error-handling.md  indented-blocks-in-lists.md  release-packaging.md  rendering-tests.md  test-coverage.md  upstream-comrak-table-alignment.md
.tasks/: .TEMPLATE.md  .schema.json
src/: config.rs  lib.rs  main.rs  markdown.rs  tasks.rs  theme.rs  tui.rs
src/gloss/: filter.rs  tui_preview.rs
src/plan/: tasks.rs  tui_kanban.rs
themes/: codesam.toml  codesam2.toml  cool.toml  default.toml  dracula.toml  matrix.toml  matrix2.toml  molokai.toml  mono.toml  morning.toml  nord.toml  solarized-dark.toml  solarized.toml  warm.toml
