[package]
name = "tablethat"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "plan + gloss — task management and markdown viewing"

[lib]
name = "tablethat_lib"
path = "src/lib.rs"

[[bin]]
name = "plan"
path = "src/bin/plan/main.rs"

[[bin]]
name = "gloss"
path = "src/bin/gloss/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
termcolor = "1.3"
ratatui = { version = "0.30", features = ["serde"] }
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
comrak = "0.53"
figment = { version = "0.10", features = ["toml", "env"] }
directories = "6"
toml = "0.8"
